--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="text_size_15">15sp</dimen>
+
     <dimen name="margin_5">5dp</dimen>
     <dimen name="margin_15">15dp</dimen>
     <dimen name="margin_35">35dp</dimen>
+    <dimen name="margin_45">45dp</dimen>
+
     <dimen name="size_0">0dp</dimen>
 </resources>
