--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -7,6 +7,13 @@
         <variable
             name="viewmodel"
             type="com.example.testtaskguessnumber.result.viewmodel.ResultViewModel" />
+
+
+        <variable
+            name="gameScoreEnum"
+            type="com.example.testtaskguessnumber.game.object.GameScore" />
+
+        <import type="android.view.View" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -14,18 +21,52 @@
         android:layout_height="match_parent">
 
         <TextView
+            android:id="@+id/game_result_won"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/margin_15"
+            android:layout_marginTop="@dimen/margin_15"
+            android:layout_marginEnd="@dimen/margin_5"
+            android:gravity="center"
+            android:text="@string/you_won"
+            android:textColor="@color/green"
+            android:textSize="@dimen/text_size_30"
+            android:visibility="@{viewmodel.gameScore == gameScoreEnum.WIN ? View.VISIBLE : View.GONE}"
+            app:layout_constraintBottom_toTopOf="@+id/number_of_guessed_numbers_title"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/game_result_lost"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/margin_15"
+            android:layout_marginTop="@dimen/margin_15"
+            android:layout_marginEnd="@dimen/margin_5"
+            android:gravity="center"
+            android:text="@string/you_lost"
+            android:textColor="@color/red"
+            android:textSize="@dimen/text_size_30"
+            android:visibility="@{viewmodel.gameScore == gameScoreEnum.LOOSE ? View.VISIBLE : View.GONE}"
+            app:layout_constraintBottom_toTopOf="@+id/number_of_guessed_numbers_title"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
             android:id="@+id/number_of_guessed_numbers_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/margin_15"
-            android:layout_marginTop="@dimen/margin_15"
+            android:layout_marginTop="@dimen/margin_35"
             android:layout_marginEnd="@dimen/margin_5"
             android:text="@string/number_of_guessed_numbers_title"
             android:textColor="@color/black"
             app:layout_constraintBottom_toTopOf="@+id/number_of_unguessed_numbers_title"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toLeftOf="@+id/number_of_guessed_numbers"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@+id/game_result_won" />
 
         <TextView
             android:id="@+id/number_of_guessed_numbers"
