--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="text_size_15">15sp</dimen>
+    <dimen name="text_size_30">30sp</dimen>
 
     <dimen name="margin_5">5dp</dimen>
     <dimen name="margin_15">15dp</dimen>
