--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -84,10 +84,10 @@
             android:id="@+id/number_of_unguessed_numbers_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/margin_15"
             android:layout_marginEnd="@dimen/margin_5"
             android:text="@string/number_of_unguessed_numbers_title"
             android:textColor="@color/black"
+            app:layout_constraintBottom_toTopOf="@+id/thought_number"
             app:layout_constraintLeft_toLeftOf="@+id/number_of_guessed_numbers_title"
             app:layout_constraintRight_toLeftOf="@+id/number_of_unguessed_numbers"
             app:layout_constraintTop_toBottomOf="@+id/number_of_guessed_numbers_title" />
@@ -102,6 +102,29 @@
             app:layout_constraintLeft_toRightOf="@+id/number_of_unguessed_numbers_title"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="@+id/number_of_unguessed_numbers_title" />
+
+        <TextView
+            android:id="@+id/thought_number_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/margin_15"
+            android:layout_marginEnd="@dimen/margin_5"
+            android:text="@string/the_hidden_number_was"
+            android:textColor="@color/black"
+            app:layout_constraintLeft_toLeftOf="@+id/number_of_guessed_numbers_title"
+            app:layout_constraintRight_toLeftOf="@+id/thought_number"
+            app:layout_constraintTop_toBottomOf="@+id/number_of_unguessed_numbers_title" />
+
+        <TextView
+            android:id="@+id/thought_number"
+            android:layout_width="@dimen/size_0"
+            android:layout_height="wrap_content"
+            android:text="@={viewmodel.getDataBindingThoughtNumber}"
+            android:textColor="@color/black"
+            app:layout_constraintBottom_toBottomOf="@+id/thought_number_title"
+            app:layout_constraintLeft_toRightOf="@+id/thought_number_title"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/thought_number_title" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/main_menu_button"
