--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -49,7 +49,7 @@
             android:text="@string/you_lost"
             android:textColor="@color/red"
             android:textSize="@dimen/text_size_30"
-            android:visibility="@{viewmodel.gameScore == gameScoreEnum.LOOSE ? View.VISIBLE : View.GONE}"
+            android:visibility="@{viewmodel.gameScore == gameScoreEnum.LOSE ? View.VISIBLE : View.GONE}"
             app:layout_constraintBottom_toTopOf="@+id/number_of_guessed_numbers_title"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
