--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -32,7 +32,7 @@
             android:text="@string/you_won"
             android:textColor="@color/green"
             android:textSize="@dimen/text_size_30"
-            android:visibility="@{viewmodel.gameScore == gameScoreEnum.WIN ? View.VISIBLE : View.GONE}"
+            android:visibility="@{viewmodel.gameScore == gameScoreEnum.WON ? View.VISIBLE : View.GONE}"
             app:layout_constraintBottom_toTopOf="@+id/number_of_guessed_numbers_title"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
