--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -19,10 +19,21 @@
             android:layout_height="wrap_content"
             android:text="@string/game_rules"
             android:textColor="@color/black"
-            app:layout_constraintBottom_toTopOf="@+id/number_edit_text"
+            app:layout_constraintBottom_toTopOf="@+id/game_result"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/game_result"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@={viewmodel.gameScoreText}"
+            android:textColor="@color/black"
+            app:layout_constraintBottom_toTopOf="@+id/number_edit_text"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/game_rules" />
 
         <androidx.appcompat.widget.AppCompatEditText
             android:id="@+id/number_edit_text"
@@ -38,7 +49,7 @@
             app:layout_constraintBottom_toTopOf="@+id/check_button"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/game_rules" />
+            app:layout_constraintTop_toBottomOf="@+id/game_result" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/check_button"
