--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,5 +8,7 @@
     <dimen name="margin_35">35dp</dimen>
     <dimen name="margin_45">45dp</dimen>
 
+    <dimen name="padding_35">35dp</dimen>
+
     <dimen name="size_0">0dp</dimen>
 </resources>
