--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -13,23 +13,31 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <androidx.appcompat.widget.AppCompatImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/background"
+            android:scaleType="fitCenter" />
+
         <TextView
             android:id="@+id/game_rules"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/game_rules"
-            android:textColor="@color/black"
-            app:layout_constraintBottom_toTopOf="@+id/game_result"
+            android:textColor="@color/white"
+            android:textSize="@dimen/text_size_20"
+            app:layout_constraintBottom_toTopOf="@+id/game_info"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/game_result"
+            android:id="@+id/game_info"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@={viewmodel.gameScoreText}"
-            android:textColor="@color/black"
+            android:textColor="@color/red"
+            android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/number_edit_text"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -44,12 +52,15 @@
             android:inputType="number"
             android:maxLength="3"
             android:singleLine="true"
+            android:gravity="center"
+            android:padding="@dimen/padding_10"
+            android:background="@drawable/rounded_edittext"
             android:text="@={viewmodel.dataBindingNumber}"
             android:textSize="@dimen/text_size_15"
             app:layout_constraintBottom_toTopOf="@+id/check_button"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/game_result" />
+            app:layout_constraintTop_toBottomOf="@+id/game_info" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/check_button"
@@ -57,6 +68,9 @@
             android:layout_height="wrap_content"
             android:onClick="@{() -> viewmodel.onCheckButtonClick()}"
             android:text="@string/check"
+            android:background="@drawable/button_sample"
+            android:textColor="@color/white"
+            android:paddingHorizontal="@dimen/padding_35"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
