--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="text_size_15">15sp</dimen>
+    <dimen name="text_size_20">20sp</dimen>
     <dimen name="text_size_30">30sp</dimen>
 
     <dimen name="margin_5">5dp</dimen>
@@ -8,6 +9,7 @@
     <dimen name="margin_35">35dp</dimen>
     <dimen name="margin_45">45dp</dimen>
 
+    <dimen name="padding_10">10dp</dimen>
     <dimen name="padding_35">35dp</dimen>
 
     <dimen name="size_0">0dp</dimen>
