--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,6 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="green">#008000</color>
-    <color name="red">#FF0000</color>
+    <color name="green">#21b01a</color>
+    <color name="red">#d92323</color>
 </resources>
