--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -23,15 +23,17 @@
             android:id="@+id/start_game_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/margin_45"
             android:background="@drawable/button_sample"
             android:onClick="@{() -> viewmodel.onStartGameButtonClick()}"
-            android:paddingHorizontal="@dimen/padding_35"
+            android:paddingHorizontal="@dimen/padding_50"
+            android:paddingVertical="@dimen/padding_25"
             android:text="@string/start_game"
             android:textColor="@color/white"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:textSize="@dimen/text_size_20"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@+id/top_gl" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/exit"
@@ -42,10 +44,23 @@
             android:paddingHorizontal="@dimen/padding_35"
             android:text="@string/exit_the_application"
             android:textColor="@color/white"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/start_game_button" />
+            app:layout_constraintTop_toBottomOf="@+id/bottom_gl" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/top_gl"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.35" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/bottom_gl"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.85" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
