--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,11 +6,14 @@
 
     <dimen name="margin_5">5dp</dimen>
     <dimen name="margin_15">15dp</dimen>
+    <dimen name="margin_20">20dp</dimen>
     <dimen name="margin_35">35dp</dimen>
     <dimen name="margin_45">45dp</dimen>
 
     <dimen name="padding_10">10dp</dimen>
+    <dimen name="padding_25">25dp</dimen>
     <dimen name="padding_35">35dp</dimen>
+    <dimen name="padding_50">50dp</dimen>
 
     <dimen name="size_0">0dp</dimen>
 </resources>
